--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           go-version: '1.22'
 
-      - name: Get Go version
-        run: (go version && exit 0)
+      - name: Run unit tests
+        run: go test ./...
