--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,6 +10,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -18,6 +21,9 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.22'
+
+      - name: Install goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
       - name: Build
         run: scripts/buildprod.sh
@@ -35,6 +41,9 @@ jobs:
 
       - name: Push image to Google Artifact Registry
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-426203/notely-ar-repo/pedrogaya/notely:latest .
+
+      - name: Migrate DB
+        run: scripts/migrateup.sh
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-426203/notely-ar-repo/pedrogaya/notely:latest --region us-central1 --allow-unauthenticated --project notely-426203 --max-instances=4
